# CmakeExample

./: CMakeLists.txt
CMakeStuff/: blas_handling.cmake  python_handling.cmake  python_virtualenv_checker.py  rpath_handling.cmake
src/mtp/blas_interface/: CMakeLists.txt  dot_prod.cpp  dot_prod.h  setup.h.in  sum.cpp  sum.h
src/mtp/dotter/: CMakeLists.txt  main.cpp
src/mtp/testing/: CMakeLists.txt  test_dot.cpp
